--- a/src/com/app/properties/Command.properties
+++ b/src/com/app/properties/Command.properties
@@ -7,3 +7,4 @@
 /classroomRentalListCategory.do=com.app.action.ClassroomRentalListCategoryAction
 /classroomRentalListSearch.do=com.app.action.ClassroomRentalListSearchAction
 /classroomRentalForm.do=com.app.action.ClassroomRentalFormAction
+/classroomRentalFormReport.do=com.app.action.ClassroomRentalFormReportAction
