유저, 관리자기능 추가

--- a/src/com/app/properties/Command.properties
+++ b/src/com/app/properties/Command.properties
@@ -2,9 +2,14 @@
 /join.do=com.app.action.JoinAction
 /logout.do=com.app.action.LogoutAction
 
-/classroomRental.do=com.app.action.ClassroomListAction
 /classroomRentalList.do=com.app.action.ClassroomRentalListAction
 /classroomRentalListCategory.do=com.app.action.ClassroomRentalListCategoryAction
 /classroomRentalListSearch.do=com.app.action.ClassroomRentalListSearchAction
 /classroomRentalForm.do=com.app.action.ClassroomRentalFormAction
 /classroomRentalFormReport.do=com.app.action.ClassroomRentalFormReportAction
+
+/adminRentalMng.do=com.app.action.AdminRentalMngAction
+/adminRentalMngStateChange.do=com.app.action.AdminRentalMngStateChangeAction
+
+/userRentalMng.do=com.app.action.UserRentalMngAction
+/userRentalMngDelete.do=com.app.action.UserRentalMngDeleteAction
