--- a/src/com/app/properties/Command.properties
+++ b/src/com/app/properties/Command.properties
@@ -13,3 +13,8 @@
 
 /userRentalMng.do=com.app.action.UserRentalMngAction
 /userRentalMngDelete.do=com.app.action.UserRentalMngDeleteAction
+
+/boardList.do=com.app.action.BoardListAction
+/boardPostRead.do=com.app.action.BoardPostReadAction
+/boardPostForm.do=com.app.action.BoardPostFormAction
+/boardPostDelete.do=com.app.action.BoardPostDeleteAction
