--- a/src/com/app/properties/Command.properties
+++ b/src/com/app/properties/Command.properties
@@ -16,5 +16,6 @@
 
 /boardList.do=com.app.action.BoardListAction
 /boardPostRead.do=com.app.action.BoardPostReadAction
+/boardPostReadCommentForm.do=com.app.action.BoardPostReadCommentFormAction
 /boardPostForm.do=com.app.action.BoardPostFormAction
 /boardPostDelete.do=com.app.action.BoardPostDeleteAction
